Feat: adding new route to verify code
